5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1662_1394.log
== TEST (2019-04-15 15:52:03) 
-- CODE:
qh=float(input("quantidade de horas :"))
v=int(input("valor pago :"))
x= 20 * 50
y= 20 * 50 + qh

if (qh => v) :
	print(round(x ,2))
else :
	print(round(y, 2))
-- ERROR:
File "XXXX", line 6
    if (qh => v) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:10) 
-- CODE:
qh=float(input("quantidade de horas :"))
v=int(input("valor pago :"))
x= 20 * 50
y= 20 * 50 + qh

if (qh => v) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- ERROR:
File "XXXX", line 6
    if (qh => v) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:15) 
-- CODE:
qh=float(input("quantidade de horas :"))
v=int(input("valor pago :"))
x= 20 * 50
y= 20 * 50 + qh

if (qh >= v) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:39) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= 20 * 50
y= 20 * 50 + qh

if (qh >= v) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (qh >= v) :
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:47) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= 20 * 50
y= 20 * 50 + qh

if (qh => v) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- ERROR:
File "XXXX", line 5
    if (qh => v) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:59) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= 20 * 50
y= 20 * 50 + qh

if (qh => 20) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- ERROR:
File "XXXX", line 5
    if (qh => 20) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:07) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= 20 * 50
y= 20 * 50 + qh

if (qh => x) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- ERROR:
File "XXXX", line 5
    if (qh => x) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:08) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= 20 * 50
y= 20 * 50 + qh

if (qh => x) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- ERROR:
File "XXXX", line 5
    if (qh => x) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:27) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= qh * 50
y= qh * 50 + qh

if (qh => qh) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- ERROR:
File "XXXX", line 5
    if (qh => qh) :
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:49) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= qh * 50
y= qh * 50 + qh

if (qh != 0) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:04) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= qh * 50
y= qh * 50 + qh

if (qh != 0) :
	print(round(y ,2))
else :
	print(round(y, 2))
-- OUTPUT:
765.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:34) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= qh * 50
y= qh * 50 + qh * 70


if (qh != 0) :
	print(round(y ,2))
else :
	print(round(y, 2))
-- OUTPUT:
1800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:54:41) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= qh * 50
y= qh * 50 + qh * 70


if (qh != 0) :
	print(round(y ,2))
else :
	print(round(y, 2))
-- EXECUTION TIME:
0.157908
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
1800.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
5400.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
5760.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:58) 
-- CODE:
qh=float(input("quantidade de horas :"))
x= qh * 50
y= qh * 50 + qh * 70


if (qh != 0) :
	print(round(x ,2))
else :
	print(round(x, 2))
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
